fix spacing in css file

--- a/byway/src/main/webapp/style.css
+++ b/byway/src/main/webapp/style.css
@@ -4,11 +4,6 @@
   width: 650px;
 }
 
-#greeting-container {
-  margin-top: 20px;
-}
-
-
 .header {
   overflow: hidden;
   background-color: #ffc05f;
@@ -33,42 +28,37 @@
 }
 
 @keyframes move{
-    0%{
-        transform:translate(0);
-        opacity:0;
-    }
-    25%{
-        opacity:1
-    }
-    50%{
-        transform:translate(10vw);
-        opacity:0;
-    }
-    100%{
-        opacity:0;
-    }
+  0%{
+    transform:translate(0);
+    opacity:0;
+  }
+  25%{
+    opacity:1
+  }
+  50%{
+    transform:translate(10vw);
+    opacity:0;
+  }
+  100%{
+    opacity:0;
+  }
 }
 
 .header-right {
   float: right;
 }
 
-
-
-
 #destinations-page #map img
 {
-    max-width : none;
+  max-width : none;
 }
 
  #destinations-page #map-search-container{
-
-    position:relative;
-    padding:5vw;
-    display: grid;
-    grid-template-columns:50% 50%;
-    grid-template-rows: 20% 80%;
-
+  position:relative;
+  padding:5vw;
+  display: grid;
+  grid-template-columns:50% 50%;
+  grid-template-rows: 20% 80%;
 }
 
 #destinations-page #map {
@@ -80,11 +70,11 @@
 }
 
 #destinations-page #destination-input-form{
-position:relative;
+  position:relative;
   grid-column: 2/span 2;
   grid-row: 1/span 1;
-
 }
+
 #destinations-page #use-current-address-button{
   grid-column: 2/span 2;
   grid-row: 1/span 1;
@@ -100,60 +90,61 @@ position:relative;
 }
 
 .progress-bar-container{
-    width:100%;
+  width:100%;
 }
+
 #progressbar{
-    counter-reset:step;
+  counter-reset:step;
 }
 
 #progressbar li {
-    list-style-type:none;
-    float:left;
-    width:33.33%;
-    position:relative;
-    text-align:center;
-    text-transform: uppercase;
+  list-style-type:none;
+  float:left;
+  width:33.33%;
+  position:relative;
+  text-align:center;
+  text-transform: uppercase;
 }
 
 #progressbar li:before{
-    content:counter(step);
-    counter-increment:step;
-    width:30px;
-    height:30px;
-    line-height:30px;
-    border:2px solid #ddd;
-    display:block;
-    text-align:center;
-    margin:0 auto 10px auto;
-    border-radius:50%;
-    background-color:white;
+  content:counter(step);
+  counter-increment:step;
+  width:30px;
+  height:30px;
+  line-height:30px;
+  border:2px solid #ddd;
+  display:block;
+  text-align:center;
+  margin:0 auto 10px auto;
+  border-radius:50%;
+  background-color:white;
 }
 
 #progressbar li:after{
-    content:'';
-    position:absolute;
-    width:100%;
-    height:2px;
-    background-color:#ddd;
-    top:15px;
-    left:-50%;
-    z-index:-1;
+  content:'';
+  position:absolute;
+  width:100%;
+  height:2px;
+  background-color:#ddd;
+  top:15px;
+  left:-50%;
+  z-index:-1;
 }
 
 #progressbar li:first-child:after{
-    content:none;
+  content:none;
 }
 
 #progressbar li.active{
-    color:#3196e2;
+  color:#3196e2;
 }
 
 #progressbar li.active:before{
-    border-color:#3196e2;
+  border-color:#3196e2;
 }
 
 #progressbar li.active + li:after{
-    background-color:#3196e2;
+  background-color:#3196e2;
 }
 
 
